# ChangeLog for dev-python/pythonocc
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Mar 2013; Justin Lecher <jlec@gentoo.org> ChangeLog:
  Version Bump; change license; move to new python eclasses

  03 Mar 2013; Justin Lecher <jlec@gentoo.org> ChangeLog:
  Version Bump; change license; move to new python eclasses

  03 Mar 2013; Justin Lecher <jlec@gentoo.org> ChangeLog:
  Version Bump; change license; move to new python eclasses

*pythonocc-0.5 (03 Mar 2013)

  03 Mar 2013; Justin Lecher <jlec@gentoo.org> -pythonocc-0.4.ebuild,
  +pythonocc-0.5.ebuild, metadata.xml:
  Version Bump; change license; move to new python eclasses

  14 Mar 2011; Oliver Borm (boroli) <oli.borm@web.de> pythonocc-0.4.ebuild:
  dev-python/pythonocc: restrict to opencascade-6.3 dependency

  26 Jun 2010; Justin Lecher <jlec@gentoo.org> pythonocc-0.4.ebuild:
  Python ABI fixes

  18 Apr 2010; Oliver Borm (boroli) <oli.borm@web.de> ChangeLog:
  Initial commit for bug 315801
