@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pythonocc
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  18 Feb 2015; Justin Lecher <jlec@gentoo.org> pythonocc-0.5.ebuild:
+  dev-python/pythonocc: fix SLOT operators; drop obsolete pythons ABIs
 
   03 Mar 2013; Justin Lecher <jlec@gentoo.org> ChangeLog:
   Version Bump; change license; move to new python eclasses
@@ -25,4 +28,3 @@
 
   18 Apr 2010; Oliver Borm (boroli) <oli.borm@web.de> ChangeLog:
   Initial commit for bug 315801
-
